--- a/template/css/pages/_detail.scss
+++ b/template/css/pages/_detail.scss
@@ -1,56 +1,69 @@
 @use '../abstracts/index' as *;
+.type-detail {
+    #vzorkovnik {
+        .plus-gallery-wrap {
+            margin-bottom: 32px !important;
+            .plus-gallery-item {
+                height: auto;
+                .plus-gallery-item-img {
+                    border-radius: 8px;
+                    overflow: hidden;
 
-#vzorkovnik {
-    .plus-gallery-wrap {
-        margin-bottom: 32px !important;
-        .plus-gallery-item {
-            height: auto;
-            .plus-gallery-item-img {
-                border-radius: 8px;
-                overflow: hidden;
+                    &:hover {
+                        img {
+                            transform: scale(1.05);
+                        }
+                    }
 
-                &:hover {
                     img {
-                        transform: scale(1.05);
+                        transition: transform 0.3s ease-in-out;
                     }
                 }
 
-                img {
-                    transition: transform 0.3s ease-in-out;
+                .plus-gallery-item-title {
+                    text-align: left;
+                    margin-top: 8px;
+                    font-weight: $fw-medium;
                 }
-            }
-
-            .plus-gallery-item-title {
-                text-align: left;
-                margin-top: 8px;
-                font-weight: $fw-medium;
             }
         }
     }
-}
 
-.vzorkovnik-link {
-    text-decoration: underline;
-    font-weight: $fw-medium;
-    max-width: 220px;
-}
-
-.product-note {
-    label {
-        font-size: 16px;
+    .vzorkovnik-link {
+        text-decoration: underline;
+        font-weight: $fw-medium;
+        max-width: 220px;
     }
-    small {
-        font-size: 14px;
-        margin-bottom: 12px;
-        margin-top: 8px;
+
+    .product-note {
+        label {
+            font-size: 16px;
+        }
+        small {
+            font-size: 14px;
+            margin-bottom: 12px;
+            margin-top: 8px;
+        }
     }
-}
 
-#productNote {
-    height: 140px;
-    resize: vertical;
+    #productNote {
+        height: 60px;
+        resize: vertical;
 
-    @include mq-max(s) {
-        height: 90px;
+        @include mq-max(s) {
+            height: 90px;
+        }
+    }
+
+    .p-info-wrapper {
+        .add-to-cart-button {
+            &.detail-btn {
+                text-align: center;
+                justify-content: center;
+                &::after {
+                    content: none;
+                }
+            }
+        }
     }
 }
