--- a/template/css/pages/_detail.scss
+++ b/template/css/pages/_detail.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/index' as *;
+
 .type-detail {
     #vzorkovnik {
         .plus-gallery-wrap {
@@ -65,5 +66,33 @@
                 }
             }
         }
+
+        .quantity input {
+            @media (min-width: 480px) {
+                height: 45px !important;
+                font-size: 20px;
+            }
+        }
+        .quantity .increase,
+        .quantity .decrease {
+            @media (min-width: 480px) {
+                height: 46px !important;
+
+                &:before {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+
+    p[data-testid='productCardDescr'] {
+        display: none;
+    }
+    .detail-grid-title {
+        display: none;
+    }
+
+    .social-buttons {
+        display: none !important;
     }
 }
