--- a/template/css/components/_header.scss
+++ b/template/css/components/_header.scss
@@ -16,6 +16,23 @@
                     flex-direction: column;
                     align-items: flex-start;
                     max-height: 100%;
+
+                    > li {
+                        @include mq-min(s-min) {
+                            margin-bottom: 7px;
+                        }
+
+                        a {
+                            @include mq-min(s-min) {
+                                font-size: 15px;
+                                text-decoration: underline;
+
+                                &:hover {
+                                    font-weight: $fw-semibold;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
