--- a/template/css/pages/_detail.scss
+++ b/template/css/pages/_detail.scss
@@ -72,6 +72,10 @@
             margin-bottom: 12px;
             margin-top: 8px;
         }
+
+        &--headline {
+            margin-bottom: 20px;
+        }
     }
 
     #productNote {
